# unit_testing_example

./: CMakeLists.txt  README.md  main.cpp  presentation.md  shape_tests.cpp  shapes.cpp  shapes.hpp
apps/: CMakeLists.txt  main.cpp
docs/: presentation.md
src/: CMakeLists.txt  shapes.cpp
tests/: CMakeLists.txt  fixture_tests.cpp  mock_tests.cpp  parameterized_tests.cpp  shape_tests.cpp  simple_tests.cpp  test_file.cpp
